--- a/public/scss/_color.scss
+++ b/public/scss/_color.scss
@@ -1,6 +1,9 @@
-$color-white-break: #fafafa;
-$color-black: #202020;
-$color-border: #f1f1f1;
+$color-white-break: #f5f5f5;
+$color-black: #333;
+$color-border: #e6e6e6;
 $color-grey: #afafaf;
-$color-blue: #217dbb;
 $color-orange: #dd4814;
+$color-green: #4bc800;
+$color-green-hover: #47be00;
+$color-blue: #1ca0e9;
+$color-blue-hover: #0389cf;
