--- a/public/css/style.css
+++ b/public/css/style.css
@@ -300,3 +300,99 @@ header .header-menu-nav a {
 .completed + span {
   text-decoration: line-through;
 }
+
+.auth {
+  padding-top: 75px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.auth .auth-auth {
+  background-color: white;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px rgba(50, 50, 50, 0.08);
+  display: block;
+  margin: auto;
+  width: 350px;
+  margin-top: 25px;
+  padding: 20px 0;
+}
+
+.auth .auth-auth .auth-form .auth-txt label {
+  font-size: 16px;
+  color: #afafaf;
+  float: left;
+  margin-bottom: 8px;
+  padding: 0 15px;
+}
+
+.auth .auth-auth .auth-form .auth-txt input {
+  border: 1px solid #e6e6e6;
+  display: block;
+  margin: 15px auto 25px;
+  padding: 8px 15px;
+  width: 85%;
+  border-radius: 2px;
+}
+
+.auth .auth-auth .auth-form .auth-txt input:focus {
+  border: 1px solid #1ca0e9;
+}
+
+.auth .auth-auth .auth-form .auth-txt input:focus label {
+  color: grey;
+}
+
+.auth .auth-auth .auth-form .auth-checkbox {
+  display: block;
+}
+
+.auth .auth-auth .auth-form .auth-checkbox label {
+  color: #afafaf;
+  display: block;
+  float: left;
+  font-size: 16px;
+  padding-left: 8px;
+}
+
+.auth .auth-auth .auth-form .auth-checkbox::after {
+  display: block;
+  clear: both;
+  content: "";
+}
+
+.auth .auth-auth .auth-form .auth-submit {
+  background-color: #1ca0e9;
+  border: medium none;
+  border-radius: 2px;
+  color: white;
+  display: block;
+  font-size: 17px;
+  font-weight: bold;
+  margin: 25px auto auto;
+  padding: 8px;
+  width: 94%;
+  cursor: pointer;
+  letter-spacing: 1px;
+}
+
+.auth .auth-auth .auth-form .auth-submit:hover {
+  background-color: #0389cf;
+}
+
+.auth .auth-register p {
+  color: grey;
+  margin-top: 15px;
+  font-size: 15px;
+  line-height: 1.2;
+}
+
+.auth .auth-register a {
+  color: #1ca0e9;
+  text-decoration: none;
+}
+
+.auth .auth-register a:hover {
+  color: #0389cf;
+  text-decoration: underline;
+}
