--- a/public/scss/_color.scss
+++ b/public/scss/_color.scss
@@ -7,3 +7,5 @@ $color-green: #4bc800;
 $color-green-hover: #47be00;
 $color-blue: #1ca0e9;
 $color-blue-hover: #0389cf;
+$color-greeen: #1a8c8e;
+$color-bluuue: #2c3e50;
