--- a/public/css/style.css
+++ b/public/css/style.css
@@ -442,3 +442,196 @@ header .header-menu-nav a {
 .auth .auth-auth .auth-form, .auth .auth-auth .auth-form-register {
   display: inline-block !important;
 }
+
+#home-page {
+  background-color: white;
+}
+
+#home-page header {
+  background-color: transparent;
+  padding: 15px;
+  height: 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+#home-page header nav {
+  display: block;
+  margin: auto;
+  width: 80%;
+}
+
+#home-page header .header-home-menu-logo {
+  float: left;
+}
+
+#home-page header .header-home-menu-logo a {
+  color: white;
+  text-decoration: none;
+}
+
+#home-page header .header-home-menu-logo a:hover {
+  color: #f5f5f5;
+}
+
+#home-page header .header-home-menu-nav {
+  float: right;
+}
+
+#home-page header .header-home-menu-nav li {
+  float: left;
+  margin-left: 25px;
+}
+
+#home-page header .header-home-menu-nav li a {
+  color: white;
+  text-decoration: none;
+}
+
+.home-b {
+  height: auto;
+  position: relative;
+  z-index: -1;
+}
+
+.home-f {
+  height: auto;
+}
+
+.home-a {
+  padding: 20px;
+}
+
+.home-banner {
+  z-index: -1;
+  display: block;
+  width: 100%;
+}
+
+.home-banner .home-banner-txt img {
+  width: 100%;
+}
+
+.home-banner .home-banner-txt .home-banner-txt-div {
+  left: 40%;
+  position: absolute;
+  top: 40%;
+  width: 30%;
+}
+
+.home-banner .home-banner-txt .home-banner-txt-div h2 {
+  color: white;
+  font-size: 45px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.home-banner-bg {
+  background-color: rgba(0, 0, 0, 0.75);
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.home-banner::after {
+  display: block;
+  clear: both;
+  content: "";
+}
+
+.home-a {
+  background: #136a8a;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #136a8a, #267871);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #136a8a, #267871);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.home-a .home-about {
+  padding: 25px 0;
+}
+
+.home-a .home-about p {
+  width: 45%;
+  display: block;
+  margin: auto;
+  line-height: 1.2;
+  color: white;
+  font-size: 1.2em;
+}
+
+.home-f .home-features-div {
+  padding: 50px 0;
+}
+
+.home-f .home-features-div .home-features-width {
+  display: block;
+  margin: auto;
+  width: 80%;
+}
+
+.home-f .home-features-div .home-features-width .home-features-div-div {
+  width: 49%;
+  display: inline-block;
+}
+
+.home-f .home-features-div .home-features-width .home-features-div-div img {
+  width: 50px;
+  float: left;
+  margin-right: 25px;
+}
+
+.home-f .home-features-div .home-features-width .home-features-div-div h3 {
+  color: #1a8c8e;
+  margin-top: 15px;
+  font-size: 1.4em;
+}
+
+.home-f .home-features-div .home-features-width .home-features-div-div .home-features-txt {
+  margin-top: 55px;
+}
+
+.home-f .home-features-div .home-features-width .home-features-div-div .home-features-txt p {
+  font-size: 1.1em;
+}
+
+.home-f .home-features-div .home-features-width .home-features-div-img {
+  display: inline-block;
+  width: 50%;
+}
+
+.home-f .home-features-div .home-features-width .home-features-div-img img {
+  float: right;
+}
+
+.home-f .home-features-div .home-features-width .home-features-div-div, .home-f .home-features-div .home-features-width .home-features-div-img {
+  vertical-align: middle;
+}
+
+.home-features-etiquettes img {
+  float: left !important;
+}
+
+.home-features-etiquettes {
+  background-color: #f5f5f5;
+}
+
+footer {
+  padding: 75px 15px;
+  background-color: #333;
+}
+
+footer p {
+  color: white;
+  font-size: 1.1em;
+  text-align: center;
+}
+
+footer a {
+  color: #1a8c8e;
+}
