--- a/public/scss/_color.scss
+++ b/public/scss/_color.scss
@@ -8,4 +8,5 @@ $color-green-hover: #47be00;
 $color-blue: #1ca0e9;
 $color-blue-hover: #0389cf;
 $color-greeen: #1a8c8e;
+$color-greeen-clear: #26b999;
 $color-bluuue: #2c3e50;
