--- a/public/scss/_menu.scss
+++ b/public/scss/_menu.scss
@@ -1,5 +1,5 @@
 header{
-  background-color: $color-black;
+  background-color: $color-bluuue;
   padding: 15px;
   height: 20px;
   .header-menu-logo{
