--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -55,18 +55,6 @@
     img{
       width: 100%;
     }
-    .home-banner-txt-div{
-      left: 40%;
-      position: absolute;
-      top: 40%;
-      width: 30%;
-      h2{
-        color: white;
-        font-size: 45px;
-        font-weight: bold;
-        margin-bottom: 15px;
-      }
-    }
   }
 }
 .home-banner-bg{
@@ -76,6 +64,15 @@
   position: absolute;
   top: 0;
   width: 100%;
+  h2{
+    color: white;
+    font-size: 45px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    position: absolute;
+    top: 45%;
+    left: 40%;
+  }
 }
 .home-banner::after{
   display: block;
@@ -122,6 +119,7 @@
           margin-top: 55px;
           p{
             font-size: 1.1em;
+            line-height: 1.4;
           }
         }
       }
