--- a/public/scss/_list.scss
+++ b/public/scss/_list.scss
@@ -1,8 +1,9 @@
 .lists{
-  display: inline-block;
+  float: left;
   width: 20%;
   .lists-lists{
     li{
+      position: relative;
       a{
         display: block;
         padding: 15px;
@@ -10,11 +11,38 @@
         text-decoration: none;
         border-top: 1px solid $color-white-break;
         border-bottom: 1px solid $color-white-break;
+        position: relative;
       }
       a:hover{
         background-color: white;
         border-top: 1px solid $color-border;
         border-bottom: 1px solid $color-border;
+      }
+      span{
+        margin-left: 30px;
+      }
+      img{
+        position: absolute;
+        top: 14px;
+      }
+      .icon-project-edit{
+        display: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: transparent !important;
+        img{
+          position: static;
+        }
+        span{
+          display: none;
+        }
+      }
+      .project-show:hover + .icon-project-edit{
+        display: block !important;
+      }
+      .icon-project-edit:hover{
+        display: block;
       }
     }
     .lists-add{
