--- a/public/scss/_tasks.scss
+++ b/public/scss/_tasks.scss
@@ -51,7 +51,7 @@
         border: 2px solid $color-border;
       }
       .task-add-submit{
-        background-color: $color-green;
+        background-color: $color-greeen;
         border: medium none;
         color: white;
         font-size: 14px;
@@ -61,7 +61,7 @@
         border-radius: 2px;
       }
       .task-add-submit:hover{
-        background-color: $color-green-hover;
+        background-color: $color-greeen-clear;
       }
       .task-edit-form-label{
         font-size: 16px;
@@ -98,16 +98,39 @@
       margin: 15px 0;
       .tasks-item{
         border-radius: 3px;
-        background-color: $color-white-break;
+        background-color: $color-bluuue;
         padding: 15px 0 15px 15px;
         margin-bottom: 15px;
         border: 1px solid $color-border;
+        color: white;
         .tasks-item-name{
           margin-left: 15px;
         }
         .tasks-item-button{
           float: right;
           margin-right: 15px;
+          a{
+            margin-left: 8px;
+          }
+        }
+        .tasks-item-infos{
+          display: none;
+          line-height: 1.2;
+          margin-left: 35px;
+          margin-top: 30px;
+          width: 60%;
+          .tasks-item-infos-icon{
+            float: left;
+          }
+          .tasks-item-infos-date {
+              margin-bottom: 15px;
+          }
+          .task-infos{
+            p{
+              font-size: 0.8em;
+              margin-left: 25px;
+            }
+          }
         }
         .tasks-item-option{
           text-decoration: none;
