--- a/public/scss/_tasks.scss
+++ b/public/scss/_tasks.scss
@@ -13,6 +13,9 @@
       padding-bottom: 15px;
       margin-bottom: 15px;
     }
+    .task-to-projet{
+      font-weight: normal;
+    }
     .task-add{
       display: block;
       width: 100%;
@@ -68,6 +71,31 @@
       }
       .task-edit-form-date{
         width: 85px;
+      }
+      .task-show{
+        margin-bottom: 30px;
+        h3{
+          border-bottom: 1px solid $color-greeen;
+          display: inline-block;
+          margin-bottom: 10px;
+          padding-bottom: 10px;
+          color: $color-greeen;
+        }
+      }
+      .task-show-edit a{
+        background-color: $color-blue;
+        border: medium none;
+        border-radius: 2px;
+        color: white;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: bold;
+        padding: 7px 20px;
+        display: inline-block;
+        text-decoration: none;
+      }
+      .task-show-edit a:hover{
+        background-color: $color-blue-hover;
       }
     }
     .task-add::after{
