--- a/public/scss/_color.scss
+++ b/public/scss/_color.scss
@@ -10,3 +10,11 @@ $color-blue-hover: #0389cf;
 $color-greeen: #1a8c8e;
 $color-greeen-clear: #26b999;
 $color-bluuue: #2c3e50;
+
+$color-1: #2c3e50;
+$color-2: #1a8c8e;
+$color-3: #e65a3a;
+$color-4: #a05663;
+$color-5: #81bcb8;
+$color-6: #f0ad4e;
+$mainColor: $color-1;
