--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,9 +1,11 @@
 @import "reset";
 @import "font";
 @import "color";
+@import "theme-color";
 @import "body";
 @import "menu";
 @import 'list';
 @import "tasks";
 @import "auth";
 @import "home";
+@import "settings";
