--- a/public/scss/_font.scss
+++ b/public/scss/_font.scss
@@ -1,1 +1,9 @@
 $font-lato : 'Lato', sans-serif;
+
+$font-1: 'Lato', sans-serif;
+$font-2: 'Open Sans', sans-serif;
+$font-3: 'Roboto', sans-serif;
+$font-4: 'Montserrat', sans-serif;
+$font-5: 'Indie Flower', cursive;
+
+$main-font: $font-1;
